# bdbag

./: .travis.yml  CHANGELOG.md  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: bdbag.yml
bdbag/: __init__.py  bdbag.py  bdbag_api.py  bdbag_cli.py  bdbag_config.py  bdbag_gui.py  bdbag_ro.py  bdbag_utils.py  bdbagit.py  bdbagit_profile.py
bdbag/fetch/: __init__.py  fetcher.py
bdbag/fetch/auth/: cookies.py  keychain.py
bdbag/fetch/resolvers/: __init__.py  ark_resolver.py  base_resolver.py  dataguid_resolver.py  doi_resolver.py
bdbag/fetch/transports/: __init__.py  base_transport.py  fetch_ark.py  fetch_boto3.py  fetch_ftp.py  fetch_gcs.py  fetch_globus.py  fetch_http.py  fetch_identifier.py  fetch_irods.py  fetch_tag.py
doc/: api.md  cli.md  config.md  utils.md
examples/: README.md  bagofbags.py  meta.py
examples/bagofbags/: README.md  bagofbags.py
examples/bagofbags/images/: MetaBags.pptx
examples/images/: MetaBags.pptx
examples/metamanifests/: README.md
profiles/: bdbag-profile.json  bdbag-ro-profile.json
test/: __init__.py  test-fetch-manifest.json  test_api.py  test_bdbagit.py  test_cli.py  test_common.py  test_remote.py
test/test-data/test-archives/: test-bag-multi-parent.tgz  test-bag-no-parent.tgz  test-bag.bz2  test-bag.tar  test-bag.tgz  test-bag.xz
test/test-data/test-bag-empty-dirs/: bag-info.txt  fetch.txt  manifest-md5.txt  manifest-sha1.txt  manifest-sha256.txt  manifest-sha512.txt  tagmanifest-md5.txt  tagmanifest-sha1.txt  tagmanifest-sha256.txt  tagmanifest-sha512.txt
test/test-data/test-bag-fetch-ark/: bag-info.txt  fetch.txt  manifest-sha256.txt  tagmanifest-md5.txt  tagmanifest-sha256.txt
test/test-data/test-bag-fetch-ark-bad/: bag-info.txt  fetch.txt  manifest-sha256.txt  tagmanifest-md5.txt  tagmanifest-sha256.txt
test/test-data/test-bag-fetch-ark2/: fetch.txt  tagmanifest-md5.txt  tagmanifest-sha256.txt
test/test-data/test-bag-fetch-dataguid/: fetch.txt  tagmanifest-md5.txt  tagmanifest-sha256.txt
test/test-data/test-bag-fetch-doi/: bag-info.txt  fetch.txt  manifest-md5.txt  tagmanifest-md5.txt  tagmanifest-sha256.txt
test/test-data/test-bag-fetch-ftp/: bag-info.txt  fetch.txt  manifest-md5.txt  manifest-sha256.txt  tagmanifest-md5.txt  tagmanifest-sha256.txt
test/test-data/test-bag-fetch-ftp-auth/: bag-info.txt  manifest-sha256.txt  tagmanifest-md5.txt  tagmanifest-sha256.txt
test/test-data/test-bag-fetch-http-bad/: bag-info.txt  fetch.txt  manifest-md5.txt  manifest-sha256.txt  tagmanifest-md5.txt  tagmanifest-sha256.txt
test/test-data/test-bag-fetch-http-encoded-filename/: bag-info.txt  fetch.txt  manifest-md5.txt  manifest-sha256.txt  tagmanifest-md5.txt  tagmanifest-sha256.txt
test/test-data/test-bag-fetch-http-no-redirect/: bag-info.txt  (+3 more)
(+134 files in other folders)
