[metadata]
description_file = README.md
license_files = LICENSE

[bdist_wheel]
universal = 1

[flake8]
select = E901,E203,E741,E999,F821,F822,F823,W504
exclude = examples/*

[coverage:run]
branch = True
include = bdbag/*,bdbag/fetch/*
omit = bdbag/bdbag_cli.py,bdbag/bdbag_ro.py,bdbag/bdbagit_profile.py,bdbag/fetch/transports/fetch_globus.py,bdbag/fetch/transports/fetch_boto3.py,bdbag/fetch/transports/fetch_gcs.py

[coverage:report]
show_missing = True
skip_covered = True